--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <label for="tes1">peso</label>
             <input type="text" name="tes1" id="tes1" class="test1" placeholder="ex: 50">
             <label for="test2">altura</label>
-            <input type="text" name="test2" id="test2" class="test2" placeholder="ex:1.70">
+            <input width="400px" type="text" name="test2" id="test2" class="test2" placeholder="ex:1.70">
             <div class="button-borders">
                 <button class="primary-button" type="submit"> Avaliar 
                 </button>
